--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <!--	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">-->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap" rel="stylesheet">
   <script type='text/javascript' src='https://10az.online.tableau.com/javascripts/api/viz_v1.js'></script>
 </head>
 <body>
